--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <h1>
 <a name="better-late-than-never-our-unreal-journey" class="anchor" href="#better-late-than-never-our-unreal-journey"><span class="octicon octicon-link"></span></a>Better Late than Never... Our Unreal Journey!</h1>
 
-<p>1 year ago, We made the decision to throw out months of work on one of our game development projects. For Our Project, we made a fresh start, turning our back on months of work and switching to a new game engine: <strong>Unreal Engine 4.</strong> It wasn’t an easy decision to make.</p>
+<p>1 year ago, We made the decision to throw out months of work on one of our game development projects. For Our Project, we made a fresh start, turning our back on months of work and switching to a new game engine: <strong>Unreal Engine 4.</strong> It wasn’t an easy decision to make. </p>
+
+<p>We’ve now been using UE4 for a couple of months, and one thing has become very clear: We made the right decision. The pace of development has increased substantially since making the switch and the latest builds look much better. </p>
 
 <p><strong>Unreal Engine 4</strong> gives you a fantastic new toolset for building games, but here at Hybreed, We are trying to use this <strong>Mind-Blowing Engine</strong>. We are building a first-person Human Simulation for various Fields where building things would be expensive (Sorry, Can't say more at this Point of time). This means dealing with extreme limitations in how the user can interact with our game. We want to provide a high-intensity and fast paced play-style (Moving anywhere in Map freely); We’ll provide the player with dynamic choices for movement based on their environment. The User can look at an object in the scene, then quickly move to that object with a gesture. </p>
 
