Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ourunreal by hybreedstudios</title>
+    <title>Our Unreal Journey by hybreedstudios</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Ourunreal</h1>
+        <h1>Our Unreal Journey</h1>
         <p>Just getting started...</p>
 
         <p class="view"><a href="https://github.com/hybreedstudios/OurUnreal">View the Project on GitHub <small>hybreedstudios/OurUnreal</small></a></p>
@@ -35,7 +35,7 @@
 
 <p>We’ve now been using UE4 for a couple of months, and one thing has become very clear: We made the right decision. The pace of development has increased substantially since making the switch and the latest builds look much better. </p>
 
-<p><strong>Unreal Engine 4</strong> gives you a fantastic new toolset for building games, but here at Hybreed, We are trying to use this <strong>Mind-Blowing Engine</strong>. We are building a first-person Human Simulation for various Fields where building things would be expensive (Sorry, Can't say more at this Point of time). This means dealing with extreme limitations in how the user can interact with our game. We want to provide a high-intensity and fast paced play-style (Moving anywhere in Map freely); We’ll provide the player with dynamic choices for movement based on their environment. The User can look at an object in the scene, then quickly move to that object with a gesture. </p>
+<p><strong>Unreal Engine 4</strong> gives you a fantastic new toolset for building games, but here at Hybreed, We are trying to use this <strong>Mind-Blowing Engine</strong> to build a first-person Human Simulation for various Fields where building things in reality would be expensive (Sorry, Can't say more at this Point of time). This means dealing with extreme limitations in how the user can interact with our game. We want to provide a high-intensity and fast paced play-style (Moving anywhere in Map freely); We’ll provide the player with dynamic choices for movement based on their environment. The User can look at an object in the scene, then quickly move to that object with a gesture. </p>
 
 <p>We are still getting our Basics Clear n this new platform... Long way to go! :)</p>
       </section>
